--- a/html/index.html
+++ b/html/index.html
@@ -82,7 +82,7 @@
           <div class="carousel-inner">
             <div class="carousel-item active">
               <div
-                class="card text-center border border-0 bg-transparent py-4 text-white"
+                class="card text-center border border-0 bg-transparent py-4 text-white align-items-center"
               >
                 <div class="image-container">
                   <img
@@ -90,7 +90,8 @@
                     class="card-img img-fluid"
                     alt="image1"
                     id="imagen"
-                  />
+                  /> 
+                  <span class="circle-spin"></span>
                 </div>
                 <div class="text-container" id="Description">
                   <div class="card-body border border-0 h">
@@ -113,7 +114,7 @@
             </div>
             <div class="carousel-item">
               <div
-                class="card text-center border border-0 bg-transparent py-4 text-white"
+                class="card text-center border border-0 bg-transparent py-4 text-white align-items-center"
               >
                 <div class="image-container">
                   <img
@@ -121,7 +122,8 @@
                     class="card-img img-fluid"
                     alt="image1"
                     id="imagen"
-                  />
+                  /> 
+                  <span class="circle-spin"></span>
                 </div>
                 <div class="text-container" id="Description">
                   <div class="card-body border border-0">
@@ -144,7 +146,7 @@
             </div>
             <div class="carousel-item">
               <div
-                class="card text-center border border-0 bg-transparent py-4 text-white"
+                class="card text-center border border-0 bg-transparent py-4 text-white align-items-center"
               >
                 <div class="image-container">
                   <img
@@ -152,7 +154,8 @@
                     class="card-img img-fluid"
                     alt="image1"
                     id="imagen"
-                  />
+                  /> 
+                  <span class="circle-spin"></span>
                 </div>
                 <div class="text-container" id="Description">
                   <div class="card-body border border-0">
@@ -176,7 +179,7 @@
             </div>
             <div class="carousel-item">
               <div
-                class="card text-center border border-0 bg-transparent py-4 text-white"
+                class="card text-center border border-0 bg-transparent py-4 text-white align-items-center"
               >
                 <div class="image-container">
                   <img
@@ -185,7 +188,9 @@
                     alt="image1"
                     id="imagen"
                   />
-                </div>
+                  <span class="circle-spin"></span>
+                </div
+                > <span class="circle-spin">/span>
                 <div class="text-container" id="Description">
                   <div class="card-body border border-0">
                     <h1 class="card-title fw-bold mb-4 text-center my-4">
