--- a/html/index.html
+++ b/html/index.html
@@ -44,7 +44,9 @@
 
     <section class="Home">
       <div class="Foto">
-        <div class="Foto-perfil"></div>
+        <img src="../img/1288491.jpg" alt="ad">
+        <span class="circle-spin"></span>
+        <span class="circle-spin2"></span>
       </div>
       <div class="home-content">
         <h1>Hi, I'm<span></span> Miguel Castillo</h1>
@@ -92,6 +94,7 @@
                     id="imagen"
                   /> 
                   <span class="circle-spin"></span>
+                  <span class="circle-spin2"></span>
                 </div>
                 <div class="text-container" id="Description">
                   <div class="card-body border border-0 h">
@@ -124,6 +127,7 @@
                     id="imagen"
                   /> 
                   <span class="circle-spin"></span>
+                  <span class="circle-spin2"></span>
                 </div>
                 <div class="text-container" id="Description">
                   <div class="card-body border border-0">
@@ -156,6 +160,7 @@
                     id="imagen"
                   /> 
                   <span class="circle-spin"></span>
+                  <span class="circle-spin2"></span>
                 </div>
                 <div class="text-container" id="Description">
                   <div class="card-body border border-0">
@@ -189,6 +194,7 @@
                     id="imagen"
                   />
                   <span class="circle-spin"></span>
+                  <span class="circle-spin2"></span>
                 </div
                 > <span class="circle-spin">/span>
                 <div class="text-container" id="Description">
