--- a/html/index.html
+++ b/html/index.html
@@ -42,7 +42,7 @@
       </nav>
     </header>
 
-    <section class="Home">
+    <section class="Home" id="Home">
       <div class="Foto">
         <img src="../img/1288491.jpg" alt="ad">
         <span class="circle-spin"></span>
@@ -72,7 +72,7 @@
       </div>
     </section>
 
-    <section class="About">
+    <section class="About" id="About Me">
       <h2 class="heading">About <span>Me</span></h2>
       <div class="about-content">
         <div
