--- a/html/index.html
+++ b/html/index.html
@@ -241,16 +241,42 @@
 
     <section class="SKills">
       <div>
-        <h1>asdasdas</h1>
-        <p>
-          Ullamco nostrud ut aliquip ullamco. Dolore irure culpa aliqua velit
-          culpa anim velit veniam Lorem enim veniam minim. Eu est laborum culpa
-          ad eiusmod voluptate consequat labore est. Dolore ut et duis tempor ut
-          reprehenderit et commodo aliquip eiusmod. Laboris irure laboris
-          laboris et est aute Lorem occaecat id ut ipsum amet eu mollit. Minim
-          ullamco laboris officia minim cillum ex proident non velit laborum ut
-          velit aliqua. Qui excepteur esse officia exercitation quis.
-        </p>
+        <h1>My <span>Skills</span></h1>
+        <div class="skill-container">
+          <div class="skill-box">
+            <div class="imageS">
+              <img src="../img/images.png" alt="HTML">
+              <div class="SkillT">
+              <span>HTML</span>
+              </div>
+              
+            </div>
+          </div>
+          <div class="skill-box">
+            <div class="imageS">
+              <img src="../img/4672509.png" alt="CSS">  
+              <div class="SkillT">
+              <span>CSS</span>
+              </div>
+            </div>
+ 
+          </div>
+          <div class="skill-box">
+            <div class="imageS">
+              <img src="" alt="">
+            </div>
+          </div>
+          <div class="skill-box">
+            <div class="imageS">
+              <img src="" alt="">
+            </div>
+          </div>
+          <div class="skill-box">
+            <div class="imageS">
+              <img src="" alt="">
+            </div>
+          </div>
+        </div>
       </div>
     </section>
   </body>
