--- a/html/index.html
+++ b/html/index.html
@@ -1,202 +1,160 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="../sass-css/Styles.css" />
-    <title>Miguel Castillo: Developer and Enginer of System</title>
 
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
-      crossorigin="anonymous"
-    />
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="../sass-css/Styles.css" />
+  <title>Miguel Castillo: Developer and Enginer of System</title>
 
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css"
-    />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
 
-    <link
-      href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
-      rel="stylesheet"
-    />
-  </head>
-  <body>
-    <header class="header">
-      <a href="#" class="logo">
-        <img src="../img/Logo.png" alt="logo" />
-      </a>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css" />
 
-      <div class="bx bx-menu" id="menu-icon">
-        <i class="bi bi-list"></i>
+  <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet" />
+</head>
+
+<body>
+  <header class="header">
+    <a href="#" class="logo">
+      <img src="../img/Logo.png" alt="logo" />
+    </a>
+
+    <div class="bx bx-menu" id="menu-icon">
+      <i class="bi bi-list"></i>
+    </div>
+
+    <nav class="navbar">
+      <a href="#Home" class="active">Home</a>
+      <a href="#About Me">About Me</a>
+      <a href="#Skills">Skills</a>
+      <a href="#Projects">Projects</a>
+      <a href="#Contact">Contact</a>
+    </nav>
+  </header>
+
+  <section class="Home" id="Home">
+    <div class="Foto">
+      <img src="../img/1288491.jpg" alt="ad">
+      <span class="circle-spin"></span>
+      <span class="circle-spin2"></span>
+    </div>
+    <div class="home-content">
+      <h1>Hi, I'm<span></span> Miguel Castillo</h1>
+      <div class="text-animate">
+        <h3>Front-End Developer</h3>
       </div>
-
-      <nav class="navbar">
-        <a href="#Home" class="active">Home</a>
-        <a href="#About Me">About Me</a>
-        <a href="#Skills">Skills</a>
-        <a href="#Projects">Projects</a>
-        <a href="#Contact">Contact</a>
-      </nav>
-    </header>
-
-    <section class="Home" id="Home">
-      <div class="Foto">
-        <img src="../img/1288491.jpg" alt="ad">
-        <span class="circle-spin"></span>
-        <span class="circle-spin2"></span>
+      <p>
+        Welcome to my digital corner! Here, creativity merges with the magic
+        of code. Explore how I transform ideas into captivating visual
+        experiences. Join me on this journey through the fascinating world of
+        digital development!
+      </p>
+      <div class="btn-box">
+        <a href="" class="btn">Hire Me</a>
+        <a href="" class="btn">Let's Talk</a>
       </div>
-      <div class="home-content">
-        <h1>Hi, I'm<span></span> Miguel Castillo</h1>
-        <div class="text-animate">
-          <h3>Front-End Developer</h3>
-        </div>
-        <p>
-          Welcome to my digital corner! Here, creativity merges with the magic
-          of code. Explore how I transform ideas into captivating visual
-          experiences. Join me on this journey through the fascinating world of
-          digital development!
-        </p>
-        <div class="btn-box">
-          <a href="" class="btn">Hire Me</a>
-          <a href="" class="btn">Let's Talk</a>
-        </div>
-        <div class="home-rds">
-          <a href="#" class="bx-facebox"><i class="bi bi-facebook"></i></a>
-          <a href="#" class="bx-Linkelin"><i class="bx bxl-linkedin"></i></a>
-          <a href="#" class="bx-Whatssap"><i class="bi bi-whatsapp"></i></a>
-          <a href="#" class="bx-Git"><i class="bi bi-github"></i></a>
-        </div>
+      <div class="home-rds">
+        <a href="#" class="bx-facebox"><i class="bi bi-facebook"></i></a>
+        <a href="#" class="bx-Linkelin"><i class="bx bxl-linkedin"></i></a>
+        <a href="#" class="bx-Whatssap"><i class="bi bi-whatsapp"></i></a>
+        <a href="#" class="bx-Git"><i class="bi bi-github"></i></a>
       </div>
-    </section>
+    </div>
+  </section>
 
-    <section class="About" id="About Me">
-      <h2 class="heading">About <span>Me</span></h2>
-      <div class="about-content">
-        <div
-          id="carouselExample"
-          class="carousel slid carousel-fade"
-          data-bs-ride="true"
-          data-bs-touch="true"
-        >
-          <div class="carousel-inner">
-            <div class="carousel-item active">
-              <div
-                class="card text-center border border-0 bg-transparent py-4 text-white align-items-center"
-              >
-                <div class="image-container">
-                  <img
-                    src="../img/1288491.jpg"
-                    class="card-img img-fluid"
-                    alt="image1"
-                    id="imagen"
-                  /> 
-                  <span class="circle-spin"></span>
-                  <span class="circle-spin2"></span>
-                </div>
-                <div class="text-container" id="Description">
-                  <div class="card-body border border-0 h">
-                    <h1 class="card-title fw-bold mb-4 text-center my-4">
-                      Who I Am?
-                    </h1>
-                    <hr />
-                    <p class="card-text my-4 fs-3">
-                      I am a passionate developer with an insatiable appetite
-                      for technology and innovation. My goal is to turn concepts
-                      into flawless digital experiences that make life more
-                      exciting. As a technology explorer, I'm ready to push
-                      boundaries and captivate your imagination. Welcome to my
-                      digital corner where creativity and technology come
-                      together to amaze you!.
-                    </p>
-                  </div>
+  <section class="About" id="About Me">
+    <h2 class="heading">About <span>Me</span></h2>
+    <div class="about-content">
+      <div id="carouselExample" class="carousel slid carousel-fade" data-bs-ride="true" data-bs-touch="true">
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <div class="card text-center border border-0 bg-transparent py-4 text-white align-items-center">
+              <div class="image-container">
+                <img src="../img/1288491.jpg" class="card-img img-fluid" alt="image1" id="imagen" />
+                <span class="circle-spin"></span>
+                <span class="circle-spin2"></span>
+              </div>
+              <div class="text-container" id="Description">
+                <div class="card-body border border-0 h">
+                  <h1 class="card-title fw-bold mb-4 text-center my-4">
+                    Who I Am?
+                  </h1>
+                  <hr />
+                  <p class="card-text my-4 fs-3">
+                    I am a passionate developer with an insatiable appetite
+                    for technology and innovation. My goal is to turn concepts
+                    into flawless digital experiences that make life more
+                    exciting. As a technology explorer, I'm ready to push
+                    boundaries and captivate your imagination. Welcome to my
+                    digital corner where creativity and technology come
+                    together to amaze you!.
+                  </p>
                 </div>
               </div>
             </div>
-            <div class="carousel-item">
-              <div
-                class="card text-center border border-0 bg-transparent py-4 text-white align-items-center"
-              >
-                <div class="image-container">
-                  <img
-                    src="../img/1288491.jpg"
-                    class="card-img img-fluid"
-                    alt="image1"
-                    id="imagen"
-                  /> 
-                  <span class="circle-spin"></span>
-                  <span class="circle-spin2"></span>
-                </div>
-                <div class="text-container" id="Description">
-                  <div class="card-body border border-0">
-                    <h1 class="card-title fw-bold mb-4 text-center my-4">
-                      Education & Skills
-                    </h1>
-                    <hr />
-                    <p class="card-text my-4 fs-3">
-                      I graduated with distinction in Systems Engineering from
-                      the University of Cundinamarca in 2023. During my studies,
-                      I acquired specialized skills in software development,
-                      database design, cybersecurity, and problem-solving. My
-                      solid education and continuous focus on learning have
-                      prepared me to face technological challenges with
-                      innovative solutions.
-                    </p>
-                  </div>
+          </div>
+          <div class="carousel-item">
+            <div class="card text-center border border-0 bg-transparent py-4 text-white align-items-center">
+              <div class="image-container">
+                <img src="../img/1288491.jpg" class="card-img img-fluid" alt="image1" id="imagen" />
+                <span class="circle-spin"></span>
+                <span class="circle-spin2"></span>
+              </div>
+              <div class="text-container" id="Description">
+                <div class="card-body border border-0">
+                  <h1 class="card-title fw-bold mb-4 text-center my-4">
+                    Education & Skills
+                  </h1>
+                  <hr />
+                  <p class="card-text my-4 fs-3">
+                    I graduated with distinction in Systems Engineering from
+                    the University of Cundinamarca in 2023. During my studies,
+                    I acquired specialized skills in software development,
+                    database design, cybersecurity, and problem-solving. My
+                    solid education and continuous focus on learning have
+                    prepared me to face technological challenges with
+                    innovative solutions.
+                  </p>
                 </div>
               </div>
             </div>
-            <div class="carousel-item">
-              <div
-                class="card text-center border border-0 bg-transparent py-4 text-white align-items-center"
-              >
-                <div class="image-container">
-                  <img
-                    src="../img/1288491.jpg"
-                    class="card-img img-fluid"
-                    alt="image1"
-                    id="imagen"
-                  /> 
-                  <span class="circle-spin"></span>
-                  <span class="circle-spin2"></span>
-                </div>
-                <div class="text-container" id="Description">
-                  <div class="card-body border border-0">
-                    <h1 class="card-title fw-bold mb-4 text-center my-4">
-                      Passions and Hobbies
-                    </h1>
-                    <hr />
-                    <p class="card-text my-4 fs-3">
-                      Passionate about video games and innovative technologies,
-                      my fascination revolves around creating virtual worlds and
-                      immersion in the metaverse. My love for immersive
-                      experiences has inspired me to dream of founding a company
-                      dedicated to developing virtual environments. I envision a
-                      future where I can offer immersive and groundbreaking
-                      experiences, combining my passion for gaming and immersive
-                      technology.
-                    </p>
-                  </div>
+          </div>
+          <div class="carousel-item">
+            <div class="card text-center border border-0 bg-transparent py-4 text-white align-items-center">
+              <div class="image-container">
+                <img src="../img/1288491.jpg" class="card-img img-fluid" alt="image1" id="imagen" />
+                <span class="circle-spin"></span>
+                <span class="circle-spin2"></span>
+              </div>
+              <div class="text-container" id="Description">
+                <div class="card-body border border-0">
+                  <h1 class="card-title fw-bold mb-4 text-center my-4">
+                    Passions and Hobbies
+                  </h1>
+                  <hr />
+                  <p class="card-text my-4 fs-3">
+                    Passionate about video games and innovative technologies,
+                    my fascination revolves around creating virtual worlds and
+                    immersion in the metaverse. My love for immersive
+                    experiences has inspired me to dream of founding a company
+                    dedicated to developing virtual environments. I envision a
+                    future where I can offer immersive and groundbreaking
+                    experiences, combining my passion for gaming and immersive
+                    technology.
+                  </p>
                 </div>
               </div>
             </div>
-            <div class="carousel-item">
-              <div
-                class="card text-center border border-0 bg-transparent py-4 text-white align-items-center"
-              >
-                <div class="image-container">
-                  <img
-                    src="../img/1288491.jpg"
-                    class="card-img img-fluid"
-                    alt="image1"
-                    id="imagen"
-                  />
-                  <span class="circle-spin"></span>
-                  <span class="circle-spin2"></span>
-                </div
-                > <span class="circle-spin">/span>
+          </div>
+          <div class="carousel-item">
+            <div class="card text-center border border-0 bg-transparent py-4 text-white align-items-center">
+              <div class="image-container">
+                <img src="../img/1288491.jpg" class="card-img img-fluid" alt="image1" id="imagen" />
+                <span class="circle-spin"></span>
+                <span class="circle-spin2"></span>
+              </div> <span class="circle-spin">/span>
                 <div class="text-container" id="Description">
                   <div class="card-body border border-0">
                     <h1 class="card-title fw-bold mb-4 text-center my-4">
@@ -214,76 +172,67 @@
                     </p>
                   </div>
                 </div>
-              </div>
-            </div>
-          </div>
-          <button
-            class="carousel-control-prev"
-            type="button"
-            data-bs-target="#carouselExample"
-            data-bs-slide="prev"
-          >
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Previous</span>
-          </button>
-          <button
-            class="carousel-control-next"
-            type="button"
-            data-bs-target="#carouselExample"
-            data-bs-slide="next"
-          >
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Next</span>
-          </button>
-        </div>
-      </div>
-    </section>
-
-    <section class="SKills">
-      <div>
-        <h1>My <span>Skills</span></h1>
-        <div class="skill-container">
-          <div class="skill-box">
-            <div class="imageS">
-              <img src="../img/images.png" alt="HTML">
-              <div class="SkillT">
-              <span>HTML</span>
-              </div>
-              
-            </div>
-          </div>
-          <div class="skill-box">
-            <div class="imageS">
-              <img src="../img/4672509.png" alt="CSS">  
-              <div class="SkillT">
-              <span>CSS</span>
-              </div>
-            </div>
- 
-          </div>
-          <div class="skill-box">
-            <div class="imageS">
-              <img src="" alt="">
-            </div>
-          </div>
-          <div class="skill-box">
-            <div class="imageS">
-              <img src="" alt="">
-            </div>
-          </div>
-          <div class="skill-box">
-            <div class="imageS">
-              <img src="" alt="">
             </div>
           </div>
         </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
       </div>
-    </section>
-  </body>
+    </div>
+  </section>
 
-  <script
-    src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-    crossorigin="anonymous"
-  ></script>
+  <section class="SKills">
+    <div>
+      <h1 id="MY">My <span>Skills</span></h1>
+      <div class="skill-container">
+        <div id="lng">
+           <span>Lenguages</span> 
+        </div>
+        <div class="card position-relative bg-transparent" id="HTML">
+          <div class="imageS">
+            <i class='bx bxl-html5'></i>
+          </div>
+          <div class="skillbox">
+            <div class="card-body">
+              <h1 class="card-text">CARD</h1>
+            </div>
+
+          </div>
+        </div>
+        <div class="card position-relative bg-transparent " id="CSS">
+          <div class="imageS">
+            <i class='bx bxl-css3' ></i>
+          </div>
+          <div class="skillbox">
+            <div class="card-body">
+              <h1 class="card-text">CARD</h1>
+            </div>
+
+          </div>
+        </div>
+        <div class="card position-relative bg-transparent " id="javascript">
+          <div class="imageS">
+            <i class='bx bxl-javascript' ></i>
+          </div>
+          <div class="skillbox">
+            <div class="card-body">
+              <h1 class="card-text">CARD</h1>
+            </div>
+
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+</body>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+  integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+
 </html>
